--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>Welcome To the Psychic Game!</h1>
-    <p>Try To guess the letter I am thinking of...</p>
+    <p>Try to guess the letter I am thinking of...</p>
 
-    <p id="Wins"></p>
-    <p id="Losses"></p>
-    <p id="NumGuess"></p>
-    <p id="Guesses"></p>
+    <p id="wins"></p>
+    <p id="losses"></p>
+    <p id="tries"></p>
+    <p id="guesses"></p>
 
     <!-- Javascript Code Below -->
     <script src="./assets/javascript/game.js"></script>
